--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,17 +24,23 @@
         android:orientation="horizontal">
 
         <RadioButton
+            android:id="@+id/radio_button_male"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Male" />
 
         <RadioButton
+            android:id="@+id/radio_button_female"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Female" />
     </RadioGroup>
 
     <EditText
+        android:id="@+id/edit_text_age"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
@@ -48,12 +54,15 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/edit_text_feet"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Feet"
             android:inputType="number" />
 
         <EditText
+            android:id="@+id/edit_text_inches"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Inches"
@@ -61,6 +70,7 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/edit_text_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
@@ -70,15 +80,16 @@
         />
 
     <Button
+        android:id="@+id/button_calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
         android:text="Calculate" />
 
     <TextView
+        android:id="@+id/text_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="26dp"
-        android:text="23.6 - You are a healthy weight!" />
+        android:layout_margin="26dp"/>
 
 </LinearLayout>
